--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t rajendratechila/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run rajendratechila/docker-react npm run test -- --coverage
+  - docker run -e CI=true rajendratechila/docker-react npm run test
